backend: check is recipe in author's book
