# api/swagger.json
@@ -171,6 +171,10 @@
           "type": "number",
           "example": 1
         },
+        "inBook": {
+          "type": "boolean",
+          "example": false
+        },
         "reviewsCount": {
           "type": "number",
           "example": 2
@@ -1095,6 +1099,12 @@
         ],
         "operationId": "GetRecipesByQuery",
         "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "type": "string",
+            "required": false
+          },
           {
             "name": "page",
             "type": "string",
